tests/neg/todo/simple/parse-01.ts
/*@ c :: {v:string | true } */
var c = 1;

/* e :: {v: #Array[#Immutable,string] | true} */
var e = "aaa";
